@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 13b9bd5c78a5e021d29ff85409c16eb30a79ca9d ChangeLog
+SHA1 c16026d65c130e2840d9a1eabb0a4ed298f6c55a ChangeLog
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 e3ab438d5df16ebbbe11679825b593a21eafc714 MANIFEST
-SHA1 0793ef63c803b67eeab9ff25aed383aa04a2504c META.yml
-SHA1 fc52276e4b0e43ca0898539916f638b471d7b568 Makefile.PL
+SHA1 f09fb7b24ee1c4a30712ba54bcea6da63d30d81e META.yml
+SHA1 0e68dd4fdfe6eb6541eb8aa2d0527eaf157394fd Makefile.PL
 SHA1 7a59a87222485f6c0e7026b30c8195c47823b3b5 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 ade875b98aca4971a381d2e037ed009b52c2f8da bin/fullauto.pl
@@ -122,7 +122,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 e1d3650b6801a3cb2e6de38574e9327914c96d40 install_mozrepl_plugin.ahk
-SHA1 0bddcab0192d8113e4037d9fb46b102ffd873143 lib/Net/FullAuto.pm
+SHA1 d23ea9d83803c54a58079d302481ef83859aab79 lib/Net/FullAuto.pm
 SHA1 cc3f8588c96516de2802c68be465447d17f781aa lib/Net/FullAuto/Custom/BackUp/README
 SHA1 5032ba28f88dbf163b0d4dd158948af9124568c9 lib/Net/FullAuto/Custom/README
 SHA1 e3db77a102d58a41e7403e85ea9740ba0eeceb67 lib/Net/FullAuto/Distro/fa_code.pm
@@ -139,11 +139,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJUKapQAAoJEBa/9Pad787EqcEIAKshFGsr/QVwfZkIR405VfA7
-uIoaSaEVMBG8xdihO5fvkbEKTBKqoSrm412ozWiMjCFllFHjxpQAKWkkcyEaTgX4
-wWDLTtbN9NE1vN/Tq0DbeGIOQxyzgjYjbpf0K706XCdty7WOqn8p8a1ibUSIfnPM
-6Y2VS1gy5YZVL7TlGrGlEA/+yRxlRQmXT1YnZLK9J7qrpMjHQ7KtQfO0qu4bWX6+
-MSVpk1PqNVch28zCEAmeOXpjVez5c+WQCvHEtGwm9G/HRoKEUwFa21n1tb3yqjxV
-Nagw2Q9k2UaC8n/a4NAs5MtuQk/kr9pyg+5574FAru3nxwATIOYRGShtTKRcuYc=
-=HFAW
+iQEcBAEBAgAGBQJUMGNJAAoJEBa/9Pad787EiDgH/0ed8LC9gCpvpx9MGUkF7/3c
+rc0bMVUSpkzPhY8gOeFJoUBmYsJ0u6DgjzjH5X3WwZ9Qh7bslH3Z8TKOI8O1aPff
+d3iE/rK2LIfzHcK8tEKjt3A5bE55Hv5J+WTT0AV+sGE00To43cilc8iEA+tjVT5i
+qT0+wqk5cwm08X+WX44Ja2+uvQwDVKoQaZppnBWToSgLkLXORFxocHyG6w71umc1
+6GK4k8vpqx6L1McyRnbV7fQ087B99O0qO/nfTbGh6scnvF0WixhQHt3RI8MNObjS
+Bjl2OK5PATJu+XrHZ7iD3xhgfImkC5jNr8D1gPMIGdVw+5FzKsq4tOTqQPnO+dM=
+=cdQo
 -----END PGP SIGNATURE-----
