@@ -22,7 +22,7 @@ package Net::FullAuto;
 #######################################################################
 
 
-our $VERSION='0.999999999915';
+our $VERSION='0.999999999916';
 
 
 use 5.005;
